[metadata]
name = vivado_hls_create_project
version = attr:vivado_hls_create_project.__version__
author = Kenta Arai
license = MIT License
description = Makefile and tcl scripts generator for creating Vivado HLS project

[options]
packages = find:
install_requires =
    logzero
    jinja2

[options.entry_points]
console_scripts =
    vivado_hls_create_project = vivado_hls_create_project.main:main

[options.package_data]
vivado_hls_create_project =
    usage/*
    template/*
    template/c++/*
    template/tcl/*
